# jarvis

./: .gitignore  .gitmodules  CMakeLists.txt
data/: corpus_source_zh.csv
include/: common.h  msp_errors.h  plugin_interface.h
src/: KeyEventHandler.cpp  KeyEventHandler.h  NPL.h  SpeechRecognizer.cpp  SpeechRecognizer.h  Voice.cpp  Voice.h  VoicePlayer.cpp  VoicePlayer.h  VoiceRecord.cpp  VoiceRecord.h  engine.h  main.cpp
src/asr/: SpeechRecognizer.cpp  SpeechRecognizer.h
src/asr/engine/: IflytekRecognizer.cpp  IflytekRecognizer.h
src/chat/: chat.cpp  chat.h
src/chat/engine/: TulingOTT.cpp  TulingOTT.h
src/nlp/: ActionAnalytics.cpp  ActionAnalytics.h  NLP.cpp  NLP.h  PatternInspired.cpp  PatternInspired.h  TextClassify.cpp  TextClassify.h
src/nlp/engine/: LPTProcessor.cpp  LPTProcessor.h  SelfTC.cpp  SelfTC.h
src/re/: IflytekRecognizer.cpp
src/tts/: TTS.cpp  TTS.h
src/tts/engine/: IflytekTTS.cpp  IflytekTTS.h
src/utils/: AsyncHttpClient.h  bgl_helper.h
test/: CMakeLists.txt  action-gen-tests.cpp  nlp-classify-tests.cpp  tts-tests.cpp
test/http/: http-tests.cpp  tts-tests.cpp
tools/: corpus_pre_process.py
